style what we do

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <!-- here end-->
 
 <!-- "what you do" section -->
-<section id="what-we-do">
-  <h2>What You Do</h2>
+<section id="what-we-do" class="intro">
+  <h2>What We Do</h2>
 
   <div>
     <h3>Step 1: Fill Out the Form Above.</h3>
