--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!-- "what you do" section -->
 <section id="what-we-do" class="intro">
-  <h2>What We Do</h2>
+  <h2 class="section-title secondary-border">What We Do</h2>
 
   <div>
     <h3>Step 1: Fill Out the Form Above.</h3>
@@ -90,33 +90,36 @@
     <p>Bi-weekly checkins with your trainer will keep you focused</p>
   </div>
 </section>
-  </section id="what-you-do">
-  <!-- What you do section -->
-  <section>
-    <h2>What You Do</h2>
- <div>
-   <img src="../images/01-04-svgs/step-1.svg" alt=""/>
-   <h3>Step 1: Fill Out the Form Above.</h3>
-   <p>You're already here, so why not?</p>
- </div>
- <div>
-  <img src="../images/01-04-svgs/step-2.svg" alt="" />
-  <h3>Step 2: Consult with One of Our Trainers.</h3>
-  <p>Are you here to build muscle, lose weight, or just feel good?</p>
-</div>
+  </section id="what-you-do" class="steps">
+  <!-- "what you do" section -->
+  <section id="what-you-do" class="steps">
+    <h2 class="section-title secondary-border">What You Do</h2>
 
-<div>
-  <img src="../images/01-04-svgs/step-3.svg" alt="" />
-  <h3>Step 3: Get Running.</h3>
-  <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-</div>
+    <div>
+      <img src="../images/01-04-svgs/step-1.svg" alt="" />
+      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+      <p>You're already here, so why not?</p>
+    </div>
 
-<div>
-  <img src="../images/01-04-svgs/step-4.svg" alt="" />
-  <h3>Step 4: See Results.</h3>
-  <p>Bi-weekly checkins with your trainer will keep you focused</p>
-</div>
+    <div>
+      <img src="../images/01-04-svgs/step-2.svg" alt="" />
+      <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+      <p>Are you here to build muscle, lose weight, or just feel good?</p>
+    </div>
+
+    <div>
+      <img src="../images/01-04-svgs/step-3.svg" alt="" />
+      <h3>Step 3: <span>Get Running.</span></h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+
+    <div>
+      <img src="../images/01-04-svgs/step-4.svg" alt="" />
+      <h3>Step 4: <span>See Results.</span></h3>
+      <p>Bi-weekly checkins with your trainer will keep you focused</p>
+    </div>
   </section>
+  
 <!-- meet the trainers sections -->
 <section>
 <h2> Meet The Trainers</h2>
